# mm

./: .gitignore  ChangeLog  Makefile.am  README  README.md  acinclude.m4  autogen.sh  configure.ac  mm.pc.in
.github/workflows/: c-cpp.yml
